fixed the overflow in animations

--- a/css/gallery.css
+++ b/css/gallery.css
@@ -15,6 +15,11 @@
 }
 
 /* gallery */
+
+.gallery__image {
+  width: 100%;
+}
+
 .gallery__image {
   width: 100%;
 }
