--- a/css/styles.css
+++ b/css/styles.css
@@ -27,6 +27,10 @@ html {
   margin: 0;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 /* typography */
 h1,
 h2,
